fixes for at-mentions popup https://trello.com/c/LIYQAYdq/2139-at-mentions-popup-behind-existing-codemarks

--- a/shared/ui/styles/inline.less
+++ b/shared/ui/styles/inline.less
@@ -38,6 +38,9 @@
 		min-height: 100vh;
 		overflow-y: auto;
 	}
+	&.cs-at-selection {
+		z-index: 35;
+	}
 }
 
 .codemark-container {
